fixed a bug
cover art was not visible

--- a/style.css
+++ b/style.css
@@ -185,6 +185,10 @@ ol {
     padding-top: 100px;
 }
 
+#audio {
+  display: none;
+}
+
 .music-info {
     display: grid;
     justify-content: center;
